--- a/all_questions_base.html
+++ b/all_questions_base.html
@@ -11,9 +11,17 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="./bower_components/angular/angular.min.js"></script>
+    <script src="./bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="js/app.js"></script>
+
+
     <title>Questions App</title>
 </head>
 <body>
+<div ng-app="questionsApp" ng-controller="homeController">
+
 <section>
     <div class="container">
         <div class="row margin-bottom-search">
@@ -68,10 +76,10 @@
                         <div class="col-md-9 col-sm-12 col-xs-12">
                             <div class="row background-lightblue padding-user-bottom">
                                 <div class="col-md-2  col-sm-2 col-xs-3 no-padding-left padding-user">
-                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" data-toggle="modal" data-target="#myModal" alt="nameuser"></center>
+                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" ng-click="open()" alt="nameuser"></center>
                                 </div>
                                 <div class="col-md-10 col-sm-10 col-xs-9 no-padding-right padding-user">
-                                    <p class="blue-text regular-font">Eva <span class="dark-grey-text">IS ASKING:</span></p>
+                                    <p class="blue-text regular-font" ng-click="open()">Eva <span class="dark-grey-text">IS ASKING:</span></p>
                                     <a href="single_question_base.html"><p class="blue-text genre-font question"><i>Will insulin make my patient gain weight?</i></p></a>
                                 </div>
                             </div>
@@ -176,10 +184,10 @@
                         <div class="col-md-9 col-sm-12 col-xs-12">
                             <div class="row background-lightblue padding-user-bottom">
                                 <div class="col-md-2 col-sm-2 col-xs-3 no-padding-left padding-user">
-                                    <center><img src="img/dexter.jpg" width="60" class="img-circle img-responsive" alt="nameuser"></center>
+                                    <center><img src="img/dexter.jpg" width="60" class="img-circle img-responsive" alt="nameuser" ng-click="open()"></center>
                                 </div>
                                 <div class="col-md-10 col-sm-10 col-xs-9 no-padding-right padding-user">
-                                    <p class="blue-text regular-font">Andrew <span class="dark-grey-text">IS ASKING:</span></p>
+                                    <p class="blue-text regular-font" ng-click="open()">Andrew <span class="dark-grey-text">IS ASKING:</span></p>
                                     <p class="blue-text genre-font question"><i>Vegan diet in diabetes treatment?</i></p>
                                 </div>
                             </div>
@@ -284,10 +292,10 @@
                         <div class="col-md-9 col-sm-12 col-xs-12 ">
                             <div class="row background-lightblue padding-user-bottom">
                                 <div class="col-md-2 col-sm-2 col-xs-3 no-padding-left padding-user">
-                                    <center><img src="img/apsycho.jpg" width="60" class="img-circle img-responsive" alt="nameuser"></center>
+                                    <center><img src="img/apsycho.jpg" width="60" class="img-circle img-responsive" alt="nameuser" ng-click="open()"></center>
                                 </div>
-                                <div class="col-md-10 col-sm-10 col-xs- no-padding-right padding-user">
-                                    <p class="blue-text regular-font">Joseph <span class="dark-grey-text">IS ASKING:</span></p>
+                                <div class="col-md-10 col-sm-10 col-xs-9 no-padding-right padding-user">
+                                    <p class="blue-text regular-font" ng-click="open()">Joseph <span class="dark-grey-text">IS ASKING:</span></p>
                                     <p class="blue-text genre-font question"><i>Vegan diet to stop diabetes progress?</i></p>
                                 </div>
                             </div>
@@ -374,138 +382,6 @@
     <br><br><br>
 </section>
 
-<!-- Modal -->
-<div class="modal fade" id="myModal" role="dialog" aria-labelledby="gridSystemModalLabel">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content modal-user ">
-            <div class="modal-body">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <br><br>
-                <div class="row">
-                    <div class="col-md-10 col-md-offset-1 col-md-offset-right-1 col-sm-10 col-sm-offset-1 col-sm-offset-right-1 col-xs-10 col-xs-offset-1 col-xs-offset-right-1" >
-                        <div class="row">
-                            <div class="col-md-12 col-sm-12  col-xs-12 ">
-                               <div class="row">
-                                   <div class="col-md-4 col-md-offset-4 col-md-offset-right-4
-                                   col-sm-4 col-sm-offset-4 col-sm-offset-right-4
-                                   col-xs-4 col-xs-offset-4 col-xs-offset-right-4">
-                                           <img src="img/me.jpg" width="100" class="img-circle img-responsive center-pic">
-                                   </div>
-                               </div>
-                                <br>
-                                <p class="blue-text text-center regular-font regular-font-17">Dr. Halima</p>
-                            </div>
-                        </div>
-                        <div class="row line-modal">
-                            <div class="col-md-4 col-sm-4 col-xs-12"><p class="regular-font  grey-text text-left">MEMBER FOR <br class="visible-xs"><span class="black-text">  5 months</span></p></div>
-                            <div class="col-md-4 col-sm-4 col-xs-12"><p class="regular-font  grey-text text-center">LAST SEEN <br class="visible-xs"><span class="black-text">  Saturday afternoon</span></p></div>
-                            <div class="col-md-4 col-sm-4 col-xs-12"><p class="regular-font  grey-text text-right">ACTIVITY LEVEL <br class="visible-xs"><span class="black-text">  <i class="fa fa-asterisk red-text"></i> <i class="fa fa-asterisk red-text"></i> <i class="fa fa-asterisk grey-text"></i></span></p></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-1 col-sm-2 col-xs-1 no-padding-left">
-                                <a href="#">
-                                    <i class="fa fa-chevron-circle-left fa-3x grey-text header-back hidden-xs"></i>
-                                    <i class="fa fa-chevron-circle-left fa-2x grey-text header-back visible-xs"></i>
-                                </a>
-                            </div>
-                            <div class="col-md-10 col-sm-8 col-xs-10">
-                                <p class="text-center genre-font modal-question">How it all started</p>
-                            </div>
-                            <div class="col-md-1 col-sm-2 col-xs-1 no-padding-left">
-                                <i class="fa fa-chevron-circle-right fa-3x blue-text header-back hidden-xs"></i>
-                                <i class="fa fa-chevron-circle-right fa-2x blue-text header-back visible-xs"></i>
-                            </div>
-                        </div>
-                        <div><p class="text-center regular-font regular-font-14 grey-text">THAT'S WHERE WE HAVE BEEN THESE 5 MONTHS AGO</p></div>
-                        <div class="row modal-boxes">
-                            <br><br>
-                            <div class="col-md-12 col-sm-12 col-xs-12">
-                                <div class="row">
-                                    <div class="col-md-3 col-sm-3 col-xs-6 modal-box-1">
-                                        <div class="modal-box-1-content genre-font black-text">
-                                           <p class="modal-box-1-number">
-                                               <b>46</b>
-                                            peers</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-sm-3 col-xs-6 modal-box-2">
-                                        <div class="modal-box-2-content genre-font black-text">
-                                            <p class="modal-box-2-number">
-                                                <b>29</b>
-                                                discussions</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-sm-3 col-xs-6 modal-box-3">
-                                        <div class="modal-box-3-content genre-font black-text">
-                                            <p class="modal-box-3-number">
-                                                <b>19</b>
-                                                findings</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-sm-3 col-xs-6 modal-box-4">
-                                        <div class="modal-box-4-content  genre-font black-text">
-                                            <p class="modal-box-4-number">
-                                                <b>10</b>
-                                                questions</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div><p class="text-center regular-font regular-font-14 grey-text">WHO JOINED THE PLATFORM THAT SAME PERIOD</p></div>
-                        <br>
-                        <div class="row">
-                            <div class="col-md-2 col-md-offset-3 col-sm-3 col-sm-offset-12p col-xs-4">
-                                <div class="background-pic">
-                                    <img class="centered img-circle" src="img/hannibal.jpg" alt="">
-                                </div>
-                                <p class="text-center regular-font  blue-text subname">S.E.N. Waveru</p>
-                            </div>
-                            <div class="col-md-2 col-sm-3 col-xs-4">
-                                <div class="background-pic">
-                                    <img class="centered img-circle" src="img/dexter.jpg" alt="">
-                                </div>
-                                <p class="text-center regular-font  blue-text subname">Patricia</p>
-                            </div>
-                            <div class="col-md-2 col-md-offset-right-3 col-sm-3 col-xs-4">
-                                <div class="background-pic">
-                                    <img class="centered img-circle" src="img/bane.jpg" alt="">
-                                </div>
-                                <p class="text-center regular-font  blue-text subname">Joseph Alouch</p>
-                            </div>
-                        </div>
-                        <br><br>
-                        <div><p class="text-center regular-font regular-font-14 grey-text">THE HOTTEST DISCUSSION THESE DAYS</p></div>
-                        <br><br>
-
-                    </div>
-
-                    <div class="col-md-12 col-sm-12 col-xs-12 background-pic">
-
-                            <div class="col-md-4 col-md-offset-4 col-md-offset-right-4 col-sm-4 col-sm-offset-4 col-sm-offset-right-4 col-xs-4 col-xs-offset-4 col-xs-offset-right-4 pic-end">
-                                <img class="img-circle center-pic size-pic" src="img/got.jpg" alt="">
-                            </div>
-                            <div class="col-md-12 col-sm-12 col-xs-12">
-                                <p class="regular-font blue-text text-center">Andrew <span class="grey-text s11">FOUND THE GUARDIAN ARTICLE</span></p>
-                                <h4 class=" text-center blue-text genre-font s15"><b>Vegan diet to stop diabetes progress</b></h4>
-                            </div>
-                            <div class="col-md-offset-1 col-md-10 col-md-offset-right-2 col-sm-12 col-xs-12">
-                                <div class="row s11">
-                                    <div class="col-md-3 col-sm-3 col-xs-6 substats-1 "><p class="genre-font  black-text">6 peers involved</p></div>
-                                    <div class="col-md-3 col-sm-3 col-xs-6 substats-2 "><p class="genre-font  black-text">3 related discussion</p></div>
-                                    <div class="col-md-3 col-sm-3 col-xs-6  substats-3"><p class="genre-font  black-text">3 conversations</p></div>
-                                    <div class="col-md-2 col-sm-3 col-xs-6 "><p class="genre-font  black-text">19 upvotes</p></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-
+</div>
 </body>
 </html>
