--- a/single_question_base.html
+++ b/single_question_base.html
@@ -11,9 +11,15 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="./bower_components/angular/angular.min.js"></script>
+    <script src="./bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="js/app.js"></script>
+
     <title>Questions App</title>
 </head>
-<body>
+<body ng-app="questionsApp" ng-controller="homeController">
+
 <section>
     <div class="container">
         <div class="row">
@@ -50,12 +56,12 @@
                         <div class="col-md-9 col-sm-9 col-xs-12">
                             <div class="row background-lightblue padding-user-bottom">
                                 <div class="col-md-2 col-sm-2 col-xs-3 pleft  no-padding-left padding-user">
-                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" data-toggle="modal" data-target="#myModal" alt="nameuser"></center>
+                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" alt="nameuser" ng-click="open()"></center>
                                 </div>
                                 <div class="col-md-10 col-sm-10 col-xs-8 no-padding-right padding-user">
                                     <div class="row">
                                         <div class="col-md-10  col-sm-10 col-xs-10">
-                                            <p class="blue-text regular-font">Eva <span class="dark-grey-text">IS ASKING:</span></p>
+                                            <p class="blue-text regular-font" ng-click="open()">Eva <span class="dark-grey-text">IS ASKING:</span></p>
                                         </div>
                                         <div class="col-md-10 col-sm-10 col-xs-10 hidden-xs">
                                             <p class="blue-text genre-font question"><i>Will insulin make my patient gain weight?</i></p>
@@ -143,13 +149,13 @@
                         <div class="col-md-9 col-sm-9 col-xs-12">
                             <div class="row background-white ">
                                 <div class="col-md-2 col-sm-2 hidden-xs u-photo padding-user grey-border-right">
-                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" data-toggle="modal" data-target="#myModal" alt="nameuser"></center>
+                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive"  alt="nameuser" ng-click="open()"></center>
                                 </div>
                                 <div class="visible-xs col-xs-3 padding-user">
-                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" data-toggle="modal" data-target="#myModal" alt="nameuser"></center>
+                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" alt="nameuser" ng-click="open()"></center>
                                 </div>
                                 <div class="col-md-10 col-sm-10 col-xs-9 no-padding-right padding-user">
-                                    <p class="blue-text regular-font">Patricia <span class="dark-grey-text">COMMENTED IT • </span> <span class="genre-font black-text">yesterday</span></p>
+                                    <p class="blue-text regular-font" ng-click="open()">Patricia <span class="dark-grey-text">COMMENTED IT • </span> <span class="genre-font black-text">yesterday</span></p>
                                     <p class="hidden-xs"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                 </div>
                                 <div class="visible-xs col-xs-12 no-padding-right padding-user grey-border-top">
@@ -171,22 +177,22 @@
                                     <div class=" column grey-border-right"></div>
                                 </div>
                                 <div class="col-md-2 col-sm-2 col-xs-2 grey-border-top grey-border-right background-white">
-                                    <div class="column h-votes"  style="padding-right: 0;">
-                                        <center><img src="img/hannibal.jpg" width="60" class="img-circle img-responsive" alt="nameuser"></center>
+                                    <div class="column h-votes">
+                                        <center><img src="img/hannibal.jpg" width="60" class="img-circle img-responsive" alt="nameuser" ng-click="open()"></center>
                                     </div>
                                 </div>
                                 <div class="col-md-8 col-sm-8 col-xs-8 grey-border-top background-white column">
-                                    <p class=" discussion-text blue-text regular-font">Patricia <span class="dark-grey-text">COMMENTED IT • </span> <span class="genre-font black-text">yesterday</span></p>
+                                    <p class=" discussion-text blue-text regular-font" ng-click="open()">Patricia <span class="dark-grey-text">COMMENTED IT • </span> <span class="genre-font black-text">yesterday</span></p>
                                     <p class="content-text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                                 </div>
                             </div>
 
                             <div class="row background-white visible-xs grey-border-top grey-border-left " >
                                 <div class="col-xs-3 padding-user">
-                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" data-toggle="modal" data-target="#myModal" alt="nameuser"></center>
+                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" alt="nameuser" ng-click="open()"></center>
                                 </div>
                                 <div class="col-xs-9 no-padding-right padding-user">
-                                    <p class="blue-text regular-font">Patricia <span class="dark-grey-text">COMMENTED IT • </span> <span class="genre-font black-text">yesterday</span></p>
+                                    <p class="blue-text regular-font" ng-click="open()">Patricia <span class="dark-grey-text">COMMENTED IT • </span> <span class="genre-font black-text">yesterday</span></p>
                                     <p class="hidden-xs"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                 </div>
                                 <div class=" col-xs-12  no-padding-right padding-user grey-border-top h-discussion-a">
@@ -244,10 +250,10 @@
                         <div class="col-md-9 col-xs-9">
                             <div class="row background-white ">
                                 <div class="col-md-2 col-xs-2 u-photo-comment  padding-user grey-border-right">
-                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" data-toggle="modal" data-target="#myModal" alt="nameuser"></center>
+                                    <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" alt="nameuser" ng-click="open()"></center>
                                 </div>
                                 <div class="col-md-10 col-xs-10 no-padding-right padding-user">
-                                    <p class="blue-text regular-font">Patricia <span class="dark-grey-text">COMMENTED IT • </span> <span class="genre-font black-text">two days</span></p>
+                                    <p class="blue-text regular-font" ng-click="open()">Patricia <span class="dark-grey-text">COMMENTED IT • </span> <span class="genre-font black-text">two days</span></p>
                                     <p > Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
                                 </div>
                             </div>
@@ -282,10 +288,10 @@
                 <div class="col-xs-12">
                     <div class="row background-white padding-user-bottom">
                         <div class="col-xs-3 padding-user">
-                            <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" data-toggle="modal" data-target="#myModal" alt="nameuser"></center>
+                            <center><img src="img/me.jpg" width="60" class="img-circle img-responsive" alt="nameuser" ng-click="open()"></center>
                         </div>
                         <div class="col-md-10 col-xs-8 no-padding-right padding-user">
-                            <p class="blue-text regular-font">Patricia <span class="dark-grey-text">COMMENTED IT • </span> <span class="genre-font black-text">yesterday</span></p>
+                            <p class="blue-text regular-font" ng-click="open()">Patricia <span class="dark-grey-text">COMMENTED IT • </span> <span class="genre-font black-text">yesterday</span></p>
                         </div>
                     </div>
 
